--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,86 @@
     transform: rotate(360deg);
   }
 }
+
+.card-container.card {
+  max-width: 350px !important;
+  padding: 40px 40px;
+}
+
+.labelo {
+  background-color: #807d8a;
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  padding: 25px 35px 20px 30px;
+}
+
+.card {
+  background-color: #f7f7f7;
+  padding: 20px 25px 30px;
+  margin: 0 auto 25px;
+  margin-top: 50px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.profile-img-card {
+  width: 96px;
+  height: 96px;
+  margin: 0 auto 10px;
+  display: block;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.flexy {
+  justify-content: center;
+  display: flex;
+  word-spacing: 0cm;
+}
+.centry {
+  justify-content: center;
+  display: flex;
+}
+
+h6,
+h4 {
+  font-weight: 300;
+  color: #15485c;
+}
+
+.tablo {
+  background-color: #f7f7f7;
+}
+th {
+  background-color: #a798b6;
+  color: white;
+}
+.titre {
+  padding: 50px 50px 50px 50px;
+  color: #f7f7f7;
+}
+
+.navy {
+  background-color: #86848d;
+}
+.linky {
+  color: #000;
+}
+
+.nav-item {
+  font-weight: 600;
+}
+
+.titry {
+  padding: 30px 35px 30px;
+}
+.centry {
+  padding: 30px 35px 30px;
+  font-weight: 500;
+}
